# configuration_managment_2023

task1_class/: 1  2  3  4  5  6  a.out  cpp_task_1.cpp  first_py_task
task1_home/: archive.tar  first_homework  main.py
task1_home/archive_virtual/: data_1  data_2
task1_home/cpp/: CMakeCache.txt  CMakeLists.txt  main.cpp
task2/: main.py  requirements.txt
task3/: example.config  main.py
task4/: main.cpp  main.py
task5/: main.py
task6/: client.py  server.py
